# rmux

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/rmux-client/: Cargo.toml
crates/rmux-client/src/: connect.rs  dispatch.rs  lib.rs  main.rs  terminal.rs
crates/rmux-core/: Cargo.toml
crates/rmux-core/benches/: grid_bench.rs  layout_bench.rs  line_bench.rs  options_bench.rs  screen_bench.rs  utf8_bench.rs
crates/rmux-core/proptest-regressions/screen/: selection.txt
crates/rmux-core/src/: error.rs  key.rs  layout.rs  lib.rs  options.rs  utf8.rs
crates/rmux-core/src/grid/: cell.rs  history.rs  line.rs  mod.rs
crates/rmux-core/src/screen/: cursor.rs  mod.rs  selection.rs
crates/rmux-core/src/style/: attrs.rs  color.rs  mod.rs
crates/rmux-protocol/: Cargo.toml
crates/rmux-protocol/benches/: codec_bench.rs
crates/rmux-protocol/src/: codec.rs  identify.rs  lib.rs  message.rs
crates/rmux-server/: Cargo.toml
crates/rmux-server/benches/: format_bench.rs  render_bench.rs
crates/rmux-server/src/: client.rs  config.rs  copymode.rs  format.rs  hooks.rs  keybind.rs  lib.rs  main.rs  navigate.rs  notify.rs  overlay.rs  pane.rs  paste.rs  server.rs  session.rs  window.rs
crates/rmux-server/src/command/: mod.rs  phase4_tests.rs  phase5_tests.rs  phase6_tests.rs  test_helpers.rs
crates/rmux-server/src/command/builtins/: client.rs  display.rs  environment.rs  mod.rs  options.rs  pane.rs  paste.rs  server_cmds.rs  session.rs  window.rs
crates/rmux-server/src/render/: mod.rs
crates/rmux-terminal/: Cargo.toml
crates/rmux-terminal/benches/: diff_bench.rs  input_bench.rs  key_bench.rs
crates/rmux-terminal/proptest-regressions/: keys.txt
crates/rmux-terminal/proptest-regressions/input/: parser.txt
crates/rmux-terminal/src/: keys.rs  lib.rs  mouse.rs  pty.rs
crates/rmux-terminal/src/input/: mod.rs  params.rs  parser.rs
crates/rmux-terminal/src/output/: diff.rs  mod.rs  writer.rs
docs/: config-parity.md  tmux-parity.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_client_args.rs  fuzz_config_parser.rs  fuzz_format_expand.rs  fuzz_input_parser.rs  fuzz_key_parser.rs  fuzz_mouse_parser.rs  fuzz_options_parse.rs  fuzz_overlay_input.rs  fuzz_protocol_codec.rs  fuzz_strftime.rs  fuzz_style_parse.rs
scripts/: e2e-test.sh  test-harness.sh
