[package]
name = "rmux-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rmux-core = { path = "../crates/rmux-core" }
rmux-terminal = { path = "../crates/rmux-terminal" }
rmux-protocol = { path = "../crates/rmux-protocol" }
rmux-server = { path = "../crates/rmux-server" }
rmux-client = { path = "../crates/rmux-client" }
bytes = "1"

[[bin]]
name = "fuzz_input_parser"
path = "fuzz_targets/fuzz_input_parser.rs"
doc = false

[[bin]]
name = "fuzz_key_parser"
path = "fuzz_targets/fuzz_key_parser.rs"
doc = false

[[bin]]
name = "fuzz_mouse_parser"
path = "fuzz_targets/fuzz_mouse_parser.rs"
doc = false

[[bin]]
name = "fuzz_protocol_codec"
path = "fuzz_targets/fuzz_protocol_codec.rs"
doc = false

[[bin]]
name = "fuzz_config_parser"
path = "fuzz_targets/fuzz_config_parser.rs"
doc = false

[[bin]]
name = "fuzz_format_expand"
path = "fuzz_targets/fuzz_format_expand.rs"
doc = false

[[bin]]
name = "fuzz_options_parse"
path = "fuzz_targets/fuzz_options_parse.rs"
doc = false

[[bin]]
name = "fuzz_client_args"
path = "fuzz_targets/fuzz_client_args.rs"
doc = false

[[bin]]
name = "fuzz_strftime"
path = "fuzz_targets/fuzz_strftime.rs"
doc = false

[[bin]]
name = "fuzz_overlay_input"
path = "fuzz_targets/fuzz_overlay_input.rs"
doc = false
