[package]
name = "rmux-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Wire protocol for rmux - imsg-compatible message encoding/decoding"

[dependencies]
bytes = { workspace = true }
nix = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "codec_bench"
harness = false
