[package]
name = "rmux-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Server process for rmux - session/window/pane management"

[dependencies]
rmux-core = { workspace = true }
rmux-terminal = { workspace = true }
rmux-protocol = { workspace = true }
bitflags = { workspace = true }
bytes = { workspace = true }
nix = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = "0.22.1"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "format_bench"
harness = false

[[bench]]
name = "render_bench"
harness = false
